src/linter/checks/snapshots/notabene__linter__checks__releases__tests__duplicate_version-2.snap
---
source: src/linter/checks/releases.rs
expression: "lint(&changelog, &ruleset)"
---
- rule: DuplicateVersion
  span:
    start: 1
    end: 18446744073709551615
  path: ~
