src/linter/checks/snapshots/notabene__linter__checks__releases__tests__invalid_date-2.snap
---
source: src/linter/checks/releases.rs
expression: "linter.lint(&changelog)"
---
- rule: InvalidDate
  span:
    start: 1
    end: 10
  path: ~
- rule: InvalidDate
  span:
    start: 2
    end: 5
  path: ~
