src/linter/checks/snapshots/notabene__linter__checks__releases__tests__invalid_yanked-2.snap
---
source: src/linter/checks/releases.rs
expression: linter.lint(&changelog)
---
- rule: InvalidYanked
  location:
    start: 1
    end: 10
  path: ~
