src/linter/checks/snapshots/notabene__linter__checks__releases__tests__release_out_of_order-2.snap
---
source: src/linter/checks/releases.rs
expression: linter.lint(&changelog)
---
- rule: ReleaseOutOfOrder
  location:
    Span:
      start: 1
      end: 18446744073709551615
  path: ~
